<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneBook</string>
    <string name="query_hint">Search Contact</string>
    <string name="civ_content_description_item_contact">image</string>
    <string name="name_person">%1$s</string>
    <string name="tv_text_progress_dialog">Please Wait...</string>
    <string name="toolbar_add_icon_content_description_main">Add</string>
    <string name="civ_add_edit_contact_content_description">image</string>
    <string name="first_name_add_edit_contact_hint">First Name</string>
    <string name="last_name_add_edit_contact_hint">Last Name</string>
    <string name="number_add_edit_contact_hint">Number</string>
    <string name="confirm_add_edit_contact">Confirm</string>
    <string name="save_changes_add_edit_contact_text">Save Changes</string>
    <string name="activity_overview_edit_content_description">Edit</string>

    <string name="on_success_information">Information retrieved successfully</string>
    <string name="on_failed_retrieval">There was something wrong with the retrieval of information</string>
    <string name="edit_success">Contact edited successfully</string>
    <string name="edit_failure">There was something wrong with the save</string>
    <string name="select_action">Select Action</string>
    <string name="library_choice">Select photo from library</string>
    <string name="camera_choice">Capture photo from camera</string>
    <string name="msg_image_save">Photo capture failed: %1$s</string>
    <string name="successful_capture">Photo capture succeeded: %1$s</string>
    <string name="failed_deletion">Failed deletion</string>
    <string name="successful_deletion">Successfully Deleted</string>
    <string name="successful_save">Contact has been saved successfully</string>
    <string name="failed_save">Contact has not been saved successfully</string>

</resources>