<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/deleteContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ib_add_contact_main"
                android:layout_gravity="start"
                android:contentDescription="@string/activity_overview_edit_content_description"
                android:background="@drawable/ic_baseline_delete_24" />

            <ImageButton
                android:id="@+id/editContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ib_add_contact_main"
                android:layout_gravity="end"
                android:contentDescription="@string/activity_overview_edit_content_description"
                android:background="@drawable/ic_baseline_edit_24" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.AddContactActivity">



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/cv_outer_add_edit_contact_margin_start"
                android:layout_marginTop="@dimen/cv_outer_add_edit_contact_margin_top"
                android:layout_marginEnd="@dimen/cv_outer_add_edit_contact_margin_end"
                android:layout_marginBottom="@dimen/cv_outer_add_edit_contact_margin_bottom"
                android:elevation="@dimen/cv_outer_add_edit_contact_elevation"
                app:cardCornerRadius="@dimen/cv_outer_add_edit_contact_card_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/ll_in_cv_add_edit_contact_padding">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civProfilePic"
                        android:layout_width="@dimen/civ_add_edit_contact_layout_height"
                        android:layout_height="@dimen/civ_add_edit_contact_layout_height"
                        android:contentDescription="@string/civ_add_edit_contact_content_description"
                        android:src="@drawable/ic_baseline_person_24" />

                    <TextView
                        android:id="@+id/tvFName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        tools:text="83269463989"
                        android:hint="@string/first_name_add_edit_contact_hint"
                        android:textSize="@dimen/acet_add_edit_contact_first_name_text_size"/>

                    <TextView
                        android:id="@+id/tvLName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        tools:text="83269463989"
                        android:hint="@string/first_name_add_edit_contact_hint"
                        android:textSize="@dimen/acet_add_edit_contact_first_name_text_size"
                        android:layout_marginBottom="20dp"/>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/cv_inner_add_edit_contact_margin_top"
                        android:elevation="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/llPhoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/task_list_action_color"
                                android:gravity="center_vertical"
                                android:orientation="vertical"
                                android:visibility="visible"
                                tools:visibility="visible">

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/view_divider_add_edit_contact_layout_height"
                                    android:background="@color/divide_color" />

                                <androidx.recyclerview.widget.RecyclerView
                                    android:id="@+id/rvPhoneNumberList"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/rv_numbers_add_edit_contact_layout_margin"
                                    tools:itemCount="3" />


                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/cv_inner_add_edit_contact_margin_top"
                        android:elevation="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>

